--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
                     
                     <div class="flex justify-center">
                         <div class="profile-image">
-                            <img src="https://guyorlov.com/img/profile.jpg" alt="Guy Orlov - Data Analyst">
+                            <img src="imgs/profile.jpg" alt="Guy Orlov - Data Analyst">
                         </div>
                     </div>
                 </div>
