--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
                 <div class="project-grid">
                     <!-- Project 1: Aston Villa Dashboard -->
                     <div class="project-card" onclick="openModal('modal1')">
-                        <img src="https://guyorlov.com/img/Project_12.png" alt="Aston Villa 2023/24 Season Dashboard" class="project-image">
+                        <img src="imgs/Aston Villa 202324 Season Dashboard.png" alt="Aston Villa 2023/24 Season Dashboard" class="project-image">
                         <div class="project-content">
                             <h3>Aston Villa 2023/24 Season Dashboard</h3>
                             <div class="flex items-center gap-4 text-xs text-muted-foreground mb-4">
@@ -628,7 +628,7 @@
 
                     <!-- Project 2: Gareth Southgate Dashboard -->
                     <div class="project-card" onclick="openModal('modal2')">
-                        <img src="https://guyorlov.com/img/Project_16.png" alt="Gareth Southgate England Manager Dashboard" class="project-image">
+                        <img src="imgs/Gareth Southgate England Manager Dashboard.png" alt="Gareth Southgate England Manager Dashboard" class="project-image">
                         <div class="project-content">
                             <h3>Gareth Southgate England Manager Dashboard</h3>
                             <div class="flex items-center gap-4 text-xs text-muted-foreground mb-4">
@@ -648,7 +648,7 @@
 
                     <!-- Project 3: Spain Euro 2024 Dashboard -->
                     <div class="project-card" onclick="openModal('modal3')">
-                        <img src="https://guyorlov.com/img/project_8.png" alt="Spain UEFA Euro 2024 Championship Dashboard" class="project-image">
+                        <img src="imgs/Spain UEFA Euro 2024 Championship Dashboard.png" alt="Spain UEFA Euro 2024 Championship Dashboard" class="project-image">
                         <div class="project-content">
                             <h3>Spain UEFA Euro 2024 Championship Dashboard</h3>
                             <div class="flex items-center gap-4 text-xs text-muted-foreground mb-4">
@@ -668,7 +668,7 @@
 
                     <!-- Project 4: BSL Learning Tool -->
                     <div class="project-card" onclick="openModal('modal4')">
-                        <img src="https://guyorlov.com/img/Project_2.png" alt="British Sign Language Interactive Learning Tool" class="project-image">
+                        <img src="imgs/British Sign Language Interactive Learning Tool.png" alt="British Sign Language Interactive Learning Tool" class="project-image">
                         <div class="project-content">
                             <h3>British Sign Language (BSL) Interactive Learning Tool</h3>
                             <div class="flex items-center gap-4 text-xs text-muted-foreground mb-4">
@@ -688,7 +688,7 @@
 
                     <!-- Project 5: Lazio Champions League -->
                     <div class="project-card" onclick="openModal('modal5')">
-                        <img src="https://guyorlov.com/img/project_7.png" alt="Lazio SS 1999/2000 UEFA Champions League Campaign" class="project-image">
+                        <img src="imgs/Lazio SS 19992000 UEFA Champions League Campaign.png" alt="Lazio SS 1999/2000 UEFA Champions League Campaign" class="project-image">
                         <div class="project-content">
                             <h3>Lazio SS 1999/2000 UEFA Champions League Campaign</h3>
                             <div class="flex items-center gap-4 text-xs text-muted-foreground mb-4">
@@ -708,7 +708,7 @@
 
                     <!-- Project 6: Euro 2028 Stadiums -->
                     <div class="project-card" onclick="openModal('modal6')">
-                        <img src="https://guyorlov.com/img/Project_17.png" alt="UK & Ireland Euro 2028 Host Stadiums Dashboard" class="project-image">
+                        <img src="imgs/UK & Ireland Euro 2028 Host Stadiums Dashboard.png" alt="UK & Ireland Euro 2028 Host Stadiums Dashboard" class="project-image">
                         <div class="project-content">
                             <h3>UK & Ireland Euro 2028 Host Stadiums Dashboard</h3>
                             <div class="flex items-center gap-4 text-xs text-muted-foreground mb-4">
