--- a/index.html
+++ b/index.html
@@ -1023,7 +1023,7 @@
         <div class="modal-content">
             <button class="modal-close" onclick="closeModal('modal1')">&times;</button>
             <h2 class="mb-4">Aston Villa 2023/24 Season Dashboard</h2>
-            <img src="https://guyorlov.com/img/Project_12.png" alt="Aston Villa 2023/24 Season Dashboard" class="w-full h-64 object-cover rounded mb-6">
+            <img src="imgs/Aston Villa 202324 Season Dashboard.png" alt="Aston Villa 2023/24 Season Dashboard" class="w-full h-64 object-cover rounded mb-6">
             <div class="grid grid-cols-3 gap-4 text-center p-4 bg-muted-30 rounded mb-6">
                 <div>
                     <div class="text-sm text-muted-foreground">Type</div>
@@ -1096,7 +1096,7 @@
         <div class="modal-content">
             <button class="modal-close" onclick="closeModal('modal2')">&times;</button>
             <h2 class="mb-4">Gareth Southgate England Manager Dashboard</h2>
-            <img src="https://guyorlov.com/img/Project_16.png" alt="Gareth Southgate England Manager Dashboard" class="w-full h-64 object-cover rounded mb-6">
+            <img src="imgs/Gareth Southgate England Manager Dashboard.png" alt="Gareth Southgate England Manager Dashboard" class="w-full h-64 object-cover rounded mb-6">
             <div class="grid grid-cols-3 gap-4 text-center p-4 bg-muted-30 rounded mb-6">
                 <div>
                     <div class="text-sm text-muted-foreground">Type</div>
@@ -1145,7 +1145,7 @@
         <div class="modal-content">
             <button class="modal-close" onclick="closeModal('modal3')">&times;</button>
             <h2 class="mb-4">Spain UEFA Euro 2024 Championship Dashboard</h2>
-            <img src="https://guyorlov.com/img/project_8.png" alt="Spain UEFA Euro 2024 Championship Dashboard" class="w-full h-64 object-cover rounded mb-6">
+            <img src="imgs/Spain UEFA Euro 2024 Championship Dashboard.png" alt="Spain UEFA Euro 2024 Championship Dashboard" class="w-full h-64 object-cover rounded mb-6">
             <div class="grid grid-cols-3 gap-4 text-center p-4 bg-muted-30 rounded mb-6">
                 <div>
                     <div class="text-sm text-muted-foreground">Type</div>
@@ -1192,7 +1192,7 @@
         <div class="modal-content">
             <button class="modal-close" onclick="closeModal('modal4')">&times;</button>
             <h2 class="mb-4">British Sign Language (BSL) Interactive Learning Tool</h2>
-            <img src="https://guyorlov.com/img/Project_2.png" alt="British Sign Language Interactive Learning Tool" class="w-full h-64 object-cover rounded mb-6">
+            <img src="imgs/British Sign Language Interactive Learning Tool.png" alt="British Sign Language Interactive Learning Tool" class="w-full h-64 object-cover rounded mb-6">
             <div class="grid grid-cols-3 gap-4 text-center p-4 bg-muted-30 rounded mb-6">
                 <div>
                     <div class="text-sm text-muted-foreground">Type</div>
@@ -1239,7 +1239,7 @@
         <div class="modal-content">
             <button class="modal-close" onclick="closeModal('modal5')">&times;</button>
             <h2 class="mb-4">Lazio SS 1999/2000 UEFA Champions League Campaign</h2>
-            <img src="https://guyorlov.com/img/project_7.png" alt="Lazio SS 1999/2000 UEFA Champions League Campaign" class="w-full h-64 object-cover rounded mb-6">
+            <img src="imgs/Lazio SS 19992000 UEFA Champions League Campaign.png" alt="Lazio SS 1999/2000 UEFA Champions League Campaign" class="w-full h-64 object-cover rounded mb-6">
             <div class="grid grid-cols-3 gap-4 text-center p-4 bg-muted-30 rounded mb-6">
                 <div>
                     <div class="text-sm text-muted-foreground">Type</div>
@@ -1286,7 +1286,7 @@
         <div class="modal-content">
             <button class="modal-close" onclick="closeModal('modal6')">&times;</button>
             <h2 class="mb-4">UK & Ireland Euro 2028 Host Stadiums Dashboard</h2>
-            <img src="https://guyorlov.com/img/Project_17.png" alt="UK & Ireland Euro 2028 Host Stadiums Dashboard" class="w-full h-64 object-cover rounded mb-6">
+            <img src="imgs/UK & Ireland Euro 2028 Host Stadiums Dashboard.png" alt="UK & Ireland Euro 2028 Host Stadiums Dashboard" class="w-full h-64 object-cover rounded mb-6">
             <div class="grid grid-cols-3 gap-4 text-center p-4 bg-muted-30 rounded mb-6">
                 <div>
                     <div class="text-sm text-muted-foreground">Type</div>
